--- a/app/static/estilo.css
+++ b/app/static/estilo.css
@@ -4,6 +4,7 @@ body{
     padding: 0;
     background-image: url('/static/FONDO.jpg');
     background-size: cover;
+    background-repeat: no-repeat;
     font-family: sans-serif;
     position:absolute;
 }
