--- a/app/static/estilo2.css
+++ b/app/static/estilo2.css
@@ -1,8 +1,8 @@
-/* Estilo del fondo de la página del mapa*/
+/* Estilo del fondo de la página del mapa background-image: url('/static/fondomap.jpg'); */
 body{
     margin: 0;
     padding: 0;
-    background-image: url('/static/fondomap.jpg');
+    background-color: rgb(218, 73, 102);
     background-size: cover;
     font-family: sans-serif;
     background-repeat: no-repeat;
