--- a/app/templates/pp.html
+++ b/app/templates/pp.html
@@ -9,15 +9,15 @@
     <style> 
         .boton{ 
             position:relative;
-            left: 61%;
-            bottom: -105px;
+            right: -735px;
+            bottom: -160px;
             margin: 380px;
-            width: 250px;
-            height: 80px;
+            width: 320px;
+            height: 120px;
             padding: 0px;
             background-color: transparent;
             border-radius:0px;
-            border-color: rgb(255, 255, 255);
+            border-color: transparent;
         }
     </style>
 </head>
